Finished implementing ui

--- a/internal/view/index.html
+++ b/internal/view/index.html
@@ -13,47 +13,8 @@
 </head>
 
 <body>
-	<div id="app">
-		<img id="main-image" src="/res/01.jpg" loading="lazy">
-		<div id="header">
-			<p id="clock">21:22:09</p>
-			<p id="date">Jumat, 28-08-2020 / 09-01-1442 H</p>
-			<p id="countdown">Subuh 6 jam 46 menit lagi</p>
-		</div>
-		<div id="footer">
-			<div class="footer__space"></div>
-			<div class="event event--target">
-				<p class="event__name">Subuh</p>
-				<p class="event__time" id="fajr">04:09</p>
-				<p class="event__subtime" id="iqamah-fajr">04:29</p>
-			</div>
-			<div class="event">
-				<p class="event__name">Syuruq</p>
-				<p class="event__time" id="sunrise">05:21</p>
-			</div>
-			<div class="event">
-				<p class="event__name">Zuhur</p>
-				<p class="event__time" id="zuhr">11:29</p>
-				<p class="event__subtime" id="iqamah-zuhr">11:44</p>
-			</div>
-			<div class="event">
-				<p class="event__name">Ashar</p>
-				<p class="event__time" id="asr">14:45</p>
-				<p class="event__subtime" id="iqamah-asr">14:55</p>
-			</div>
-			<div class="event">
-				<p class="event__name">Maghrib</p>
-				<p class="event__time" id="maghrib">17:31</p>
-				<p class="event__subtime" id="iqamah-maghrib">17:41</p>
-			</div>
-			<div class="event">
-				<p class="event__name">Isha</p>
-				<p class="event__time" id="asr">14:45</p>
-				<p class="event__subtime" id="iqamah-asr">14:55</p>
-			</div>
-			<div class="footer__space"></div>
-		</div>
-	</div>
+	<script src="/js/mithril.min.js"></script>
+	<script src="/js/index.min.js"></script>
 </body>
 
 </html>
