--- a/internal/view/less/index.less
+++ b/internal/view/less/index.less
@@ -24,31 +24,32 @@ html {
 }
 
 #app {
-	display   : block;
-	width     : 100vw;
-	height    : 100vh;
-	max-width : 100vw;
-	max-height: 100vh;
-	position  : relative;
-	overflow  : hidden;
+	--main-color: #000;
 
-	--main-color: #c03f3c;
+	--header-main  : #000;
+	--header-accent: #000;
+	--header-color : #000;
 
-	--header-main  : rgba(165, 55, 64, 0.7);
-	--header-accent: rgba(0, 219, 201, 0.7);
-	--header-color : #FFF;
+	--footer-main  : #000;
+	--footer-accent: #000;
+	--footer-color : #000;
 
-	--footer-main  : rgba(67, 10, 32, 0.7);
-	--footer-accent: rgba(0, 77, 47, 0.7);
-	--footer-color : #FFF;
+	display         : block;
+	width           : 100vw;
+	height          : 100vh;
+	max-width       : 100vw;
+	max-height      : 100vh;
+	position        : relative;
+	overflow        : hidden;
+	background-color: var(--main-color);
+	cursor          : none;
 }
 
 #main-image {
-	display         : block;
-	object-fit      : contain;
-	height          : 100vh;
-	width           : 100vw;
-	background-color: var(--main-color);
+	display   : block;
+	object-fit: contain;
+	height    : 100vh;
+	width     : 100vw;
 }
 
 // Header stuffs
@@ -126,7 +127,7 @@ html {
 	font-size  : 3.5rem;
 }
 
-.event__subtime {
+.event__iqama {
 	text-align : center;
 	font-weight: 600;
 	font-size  : 2rem;
