Implement debug mode

--- a/internal/view/less/index.less
+++ b/internal/view/less/index.less
@@ -109,6 +109,7 @@ html {
 	flex-flow       : column nowrap;
 	color           : var(--footer-color);
 	background-color: var(--footer-main);
+	cursor          : pointer;
 }
 
 .event--target {
